--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,46 @@
-# Executables
-*.out
-*.exe
+# Build folders
+/build/
+/CMakeFiles/
+/out/
+/bin/
+/obj/
 
-# Object files
+# CMake generated files
+CMakeCache.txt
+CMakeFiles
+cmake_install.cmake
+*.cmake
+
+# Compiled object files
 *.o
 *.obj
+*.lo
+*.la
+*.al
 
-# Dependency files
-*.d
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Compiled Static libraries
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+# Debug files
+*.dSYM/
+*.stackdump
 
 # Logs
 *.log
 
-# Backup files
-*~
-*.bak
-
-# Editor/IDE ֆայլեր
+# Editor/IDE specific
 .vscode/
 .idea/
 *.swp
-
-# Build folders
-build/
-bin/
+*~
